REGRESSION(r233845): EME Keysystem permission when MediaStream is disabled https://bugs.webkit.org/show_bug.cgi?id=223185

Patch by Philippe Normand <pnormand@igalia.com> on 2021-03-15
Reviewed by Eric Carlson.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::requestMediaKeySystemPermissionForFrame): This method is required for
EME build configurations, not MediaStream...

Canonical link: https://commits.webkit.org/235290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274423 268f45cc-cd09-0410-ab3c-d52691b4dbfc